  them to PyPI.

- Partial fixes for SF bugs #1163244 and #1175396: If a chunk read by
  ``codecs.StreamReader.readline()`` has a trailing "\r", read one more
  character even if the user has passed a size parameter to get a proper
  line ending. Remove the special handling of a "\r\n" that has been split
  between two lines.


Build
-----

- Patch #1160164: Build zlib.pyd for Itanium.

- Bug #1189330: configure did not correctly determine the necessary
  value of LINKCC if python was built with GCC 4.0.

- Upgrade Windows build to zlib 1.2.3 which eliminates a potential security
  vulnerability in zlib 1.2.1 and 1.2.2.


Documentation
-------------

- Bug #1190204: Clarify which directories are searched by site.py.

- Bug #1193849: Clarify os.path.expanduser() documentation.

- Bug #1243192: re.UNICODE and re.LOCALE affect \d, \D, \s and \S.

- Bug #755617: Document the effects of os.chown() on Windows.

- Patch #1180012: The documentation for modulefinder is now in the library reference.

- Patch #1213031: Document that os.chown() accepts argument values of -1.

- Bug #1190563: Document os.waitpid() return value with WNOHANG flag.

- Bug #1175022: Correct the example code for property().

Tools/Demos
-----------

- Bug #1072853: pindent.py used an uninitialized variable.


What's New in Python 2.4.1 final?
=================================

*Release date: 30-MAR-2005*

Core and builtins
-----------------

- Move exception finalisation later in the shutdown process - this 
  fixes the crash seen in bug #1165761

Tests
-----

- SF patch 1167316: doctest.py fails self-test if run directly.

Build
-----

- SF patch 1171767: Darwin 8's headers are anal about POSIX compliance, 
  and linking has changed (prebinding is now deprecated, and libcc_dynamic 
  no longer exists). This configure patch makes things right.


What's New in Python 2.4.1c2?
=============================

*Release date: 17-MAR-2005*

Library
-------
